<resources>
    <string name="app_name">FoodRS</string>
    <string name="weight">Weight kg</string>
    <string name="height">Height M</string>
    <string name="age">age</string>
    <string name="gender_man">Man</string>
    <string name="gender_woman">Woman</string>
    <string name="lifestyle_prompt">Selete</string>
    <string-array name="lifestyle">
        <item>Sedentary</item>
        <item>Slight Active </item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Extremely Active </item>
    </string-array>
    <string name="submit">Confirm</string>
    <string name="title_activity_recommmendation_detail">RecommmendationDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>